# pokemon-django

./: manage.py  poke_api.py  pyproject.toml
pokemon_django/: asgi.py  settings.py  urls.py  wsgi.py
pokemons/: models.py  serializers.py  tests.py  urls.py  views.py
pokemons/migrations/: 0001_initial.py
